--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </article>
       
     </section>
-    <section id="formContainer">
+    <section class="formContainer">
       <form action="#" id="form">
         <label for="cardNameForm">
           CARDHOLDER NAME
@@ -63,6 +63,12 @@
           <button type="submit">Confirm</button>
         </label>
       </form>
+    </section>
+    <section class="thanksPage remove">
+      <img src="./images/icon-complete.svg" alt="Completed Icon">
+      <h1>THANK YOU!</h1>
+      <p>We've added your card details</p>
+      <button id="thanksButton">Continue</button>
     </section>
   </main>
   <!-- Completed state start -->  
